--- a/go.html
+++ b/go.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6426879392195114"
+     crossorigin="anonymous"></script>
     <title>LuckyPitch | Indítás</title>
     <style>
         body { background: #020617; color: #00ff88; font-family: sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; text-align: center; }
@@ -40,5 +42,6 @@
 </body>
 
 </html>
+
 
 
