--- a/meccsek.html
+++ b/meccsek.html
@@ -765,13 +765,13 @@ function checkGoals() {
                 if (typeof triggerGoalEffect === 'function') {
                     triggerGoalEffect(matchId, scoringTeam, newH > oldH ? match.homeTeam.crest : match.awayTeam.crest);
                 }
-                if (typeof socket !== 'undefined') {
-        socket.emit('admin-goal-detected', {
-            matchId: matchId,
-            teamName: scoringTeam,
-            score: `${newH}-${newA}`
-        });
-    }
+               if (typeof socket !== 'undefined') {
+    socket.emit('goal-detected-client', { // <-- Itt javítva a név!
+        matchId: matchId,
+        teamName: scoringTeam,
+        score: `${newH}-${newA}`
+    });
+}
                 // 2. CÍMSOR (TITLE) FRISSÍTÉSE
                 const originalTitle = document.title;
                 const goalTitle = `⚽ GÓL: ${scoringTeam} (${newH}:${newA}) ⚽`;
@@ -2093,6 +2093,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
