--- a/meccsek.html
+++ b/meccsek.html
@@ -505,94 +505,117 @@
     /* --- Mobil Nézet --- */
     .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
     
-    @media (max-width: 1100px) {
-        .sidebar { 
-        position: fixed; 
-        left: 0; 
-        top: 75px; 
-        width: 0px; /* Mobilon teljesen elrejthetjük */
-        height: calc(100% - 145px); 
-    }
-        .main-wrapper { padding-bottom: 70px; }
-        .mobile-nav { display: flex; }
-        .standings-sidebar { width: 85%; }
-    }
-       .sidebar.open .header-text,
-.sidebar.open .league-item span { 
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 0.4s ease 0.2s; /* Késleltetve jelenik meg, miután a sidebar már tágul */
-}
-        /* A LUCKYPITCH felirat méretezése */
-    .logo-text, .header h1 { 
-        font-size: 1.2rem !important; 
-        letter-spacing: 1px;
-    }
-
-    /* A felső sáv elrendezése, hogy ne lógjon ki semmi */
-    header, .header-container { 
-        display: flex !important;
-        justify-content: space-between !important;
-        align-items: center !important;
-        padding: 0 10px !important;
-        height: 60px !important;
-    }
-
-    /* A bejelentkezési rész (ha van ilyen class-od) */
-    .user-auth, .login-btn {
-        scale: 0.8;
-        transform-origin: right;
-    }
-        match-card {
-    width: 95% !important;
-    margin: 8px auto !important;
-}
-       #date-selector {
-    display: flex !important;
-    overflow-x: auto !important; /* Oldalra görgethetőség */
-    overflow-y: hidden;
-    white-space: nowrap !important;
-    gap: 8px !important;
-    padding: 10px !important;
-    justify-content: flex-start !important; /* Balról induljon */
-    scrollbar-width: none; /* Firefox scrollbar elrejtése */
-}
-
-#date-selector::-webkit-scrollbar {
-    display: none; /* Chrome/Safari scrollbar elrejtése */
-}
-
-.date-btn {
-    flex: 0 0 auto !important; /* Ne engedje összenyomni a gombokat */
-    min-width: 75px !important;
-    padding: 8px 12px !important;
-    font-size: 0.85rem !important;
-}
-    .mobile-nav-container {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 60px;
-        background: rgba(20, 20, 30, 0.95);
-        backdrop-filter: blur(10px);
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        z-index: 9999;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        padding-bottom: env(safe-area-inset-bottom); /* iOS bar fix */
-    }
-      body {
-        padding-bottom: 70px;
-    }
-
-    /* Elcsúszás gátlása: ne engedjük az oldalsó görgetést */
+    /* --- TELJES MOBIL OPTIMALIZÁLÁS --- */
+@media screen and (max-width: 1100px) {
+    /* 1. Alap elrendezés és Sidebar */
     html, body {
         overflow-x: hidden;
         width: 100%;
         position: relative;
-    }  
+    }
+
+    body {
+        padding-bottom: 70px; /* Hely a mobil menünek */
+    }
+
+    .sidebar { 
+        position: fixed; 
+        left: 0; 
+        top: 75px; 
+        width: 0px; 
+        height: calc(100% - 145px); 
+        visibility: hidden; /* Ne zavarjon bele a kattintásokba */
+    }
+
+    .main-wrapper { 
+        padding-bottom: 70px; 
+        width: 100%;
+    }
+
+    /* 2. Fejléc (Header) Fix - Hogy elférjen a logó és a profil */
+    header, .header-container { 
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: center !important;
+        padding: 0 15px !important;
+        height: 65px !important;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .logo-text, header h1 { 
+        font-size: 1.2rem !important; 
+        letter-spacing: 1px;
+        margin: 0;
+        white-space: nowrap;
+    }
+
+    /* Bejelentkezés/Profil gomb kicsinyítése */
+    .user-auth, .login-btn, .header-right {
+        scale: 0.85;
+        transform-origin: right;
+        display: flex;
+        align-items: center;
+    }
+
+    /* 3. Dátumválasztó (#date-selector) - Gördíthető sáv */
+    #date-selector {
+        display: flex !important;
+        overflow-x: auto !important; 
+        overflow-y: hidden;
+        white-space: nowrap !important;
+        gap: 8px !important;
+        padding: 10px 15px !important;
+        justify-content: flex-start !important; 
+        scrollbar-width: none; 
+        -webkit-overflow-scrolling: touch; /* Sima görgetés iOS-en */
+    }
+
+    #date-selector::-webkit-scrollbar {
+        display: none; 
+    }
+
+    .date-btn {
+        flex: 0 0 auto !important; 
+        min-width: 80px !important;
+        padding: 10px 12px !important;
+        font-size: 0.85rem !important;
+        text-align: center;
+    }
+
+    /* 4. Meccs kártyák (Match Cards) */
+    .match-card {
+        width: 95% !important;
+        margin: 10px auto !important;
+        box-sizing: border-box;
+    }
+
+    /* 5. Alsó Navigáció (Mobile Nav) */
+    .mobile-nav, .mobile-nav-container { 
+        display: flex !important;
+        position: fixed; 
+        bottom: 0; 
+        left: 0; 
+        right: 0; 
+        width: 100%;
+        height: 65px; 
+        background: rgba(20, 20, 30, 0.95); 
+        backdrop-filter: blur(20px); 
+        justify-content: space-around; 
+        align-items: center; 
+        z-index: 9999; 
+        border-top: 1px solid rgba(255, 255, 255, 0.1); 
+        padding-bottom: env(safe-area-inset-bottom);
+    }
+}
+
+/* Sidebar nyitáskor (ha mobilon is használod) */
+.sidebar.open .header-text,
+.sidebar.open .league-item span { 
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.4s ease 0.2s;
+} 
     </style>
 </head>
 <body>
@@ -2130,6 +2153,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
