--- a/meccsek.html
+++ b/meccsek.html
@@ -501,85 +501,94 @@
 }
 
 
-        
-   /* --- VÉGLEGES MOBIL JAVÍTÁS --- */
-@media screen and (max-width: 1100px) {
-    /* 1. Teljes oldal rázkódásmentesítése */
-    html, body {
-        overflow-x: hidden !important;
-        width: 100% !important;
-        margin: 0 !important;
-        padding: 0 !important;
+/* --- Mobil Nézet --- */
+.mobile-nav { 
+    position: fixed; bottom: 0; left: 0; right: 0; height: 70px; 
+    background: var(--glass); display: none; justify-content: space-around; 
+    align-items: center; z-index: 1100; border-top: 1px solid var(--border); 
+    backdrop-filter: blur(20px); 
+}
+
+@media (max-width: 1100px) {
+    /* 1. Sidebar teljes kikapcsolása, hogy ne tolja el a tartalmat */
+    .sidebar { 
+        display: none !important; 
     }
 
-    /* 2. Fejléc: Kisebb logó, hogy elférjen a jobb oldal */
+    /* 2. Main-wrapper: KÖZÉPRE IGAZÍTÁS */
+    .main-wrapper { 
+        padding-bottom: 80px; 
+        margin-left: 0 !important; /* Ez volt a hiba, ami eltolta balra */
+        width: 100% !important;
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+
+    .mobile-nav { display: flex; }
+    .standings-sidebar { width: 95%; margin: 0 auto; }
+
+    /* 3. FEJLÉC: Logó zsugorítása és szétosztás */
     header, .header-container {
         display: flex !important;
         justify-content: space-between !important;
         align-items: center !important;
-        padding: 0 10px !important;
+        padding: 0 15px !important;
         height: 60px !important;
         width: 100% !important;
         box-sizing: border-box !important;
     }
 
-    .logo-text, header h1 {
-        font-size: 1rem !important; /* Jelentősen kisebb, hogy beférjen a többi gomb */
-        white-space: nowrap !important;
+    .logo-text, .header h1 { 
+        font-size: 1.1rem !important; /* Hogy beférjen a bejelentkezés gomb mellé */
         margin: 0 !important;
     }
 
-    /* 3. A láthatatlan/elcsúszott Sidebar teljes elrejtése */
-    .sidebar {
-        display: none !important; /* Ha mobilon az alsó menüt használod, ezt teljesen lőjük le */
-    }
-
-    /* 4. Meccskártyák középre igazítása */
-    .main-wrapper {
-        margin: 0 !important;
-        padding: 60px 0 80px 0 !important; /* Fent a header, lent a nav miatt */
-        width: 100% !important;
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important; /* Ez teszi középre a kártyákat */
-    }
-
-    .match-card {
-        width: 92% !important; /* Kicsit keskenyebb, hogy legyen margó kétoldalt */
-        max-width: 400px !important;
-        margin: 10px 0 !important;
-        box-sizing: border-box !important;
-    }
-
-    /* 5. Dátum gombok elcsúszásának javítása */
+    /* 4. DÁTUM VÁLASZTÓ: Középre igazítva, de görgethetően */
     #date-selector {
-        width: 100% !important;
         display: flex !important;
-        justify-content: flex-start !important;
+        justify-content: flex-start !important; /* Görgetés miatt balról indul */
         overflow-x: auto !important;
-        overflow-y: hidden !important;
-        padding: 10px 5px !important;
-        gap: 8px !important;
-        -webkit-overflow-scrolling: touch !important;
-        scrollbar-width: none !important;
-    }
-
-    #date-selector::-webkit-scrollbar {
-        display: none !important;
+        white-space: nowrap !important;
+        width: 100% !important;
+        padding: 10px 15px !important;
+        gap: 10px !important;
+        scrollbar-width: none;
     }
 
     .date-btn {
-        flex: 0 0 auto !important; /* Megállítja az összenyomódást */
-        min-width: 70px !important;
-        font-size: 0.8rem !important;
+        flex: 0 0 auto !important; /* Ne engedje összenyomni a gombokat */
+        min-width: 80px;
+        padding: 10px 15px;
     }
 
-    /* 6. Alsó menü fixálása */
-    .mobile-nav-container {
-        width: 100% !important;
-        left: 0 !important;
-        right: 0 !important;
+    /* 5. MECCSKÁRTYA: Szemben legyen, ne csússzon el */
+    .match-card {
+        width: 94% !important;
+        margin: 10px auto !important; /* Az 'auto' teszi középre */
+        max-width: 500px;
     }
+}
+
+/* --- Egyéb rögzítések --- */
+html, body {
+    overflow-x: hidden !important; /* Megállítja az oldalra lötyögést */
+    width: 100%;
+}
+
+.mobile-nav-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: rgba(20, 20, 30, 0.95);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 9999;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
     </style>
 </head>
@@ -2118,6 +2127,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
